--- a/agents/ten_packages/extension/agent_candidate/manifest.json
+++ b/agents/ten_packages/extension/agent_candidate/manifest.json
@@ -1,6 +1,6 @@
 {
   "type": "extension",
-  "name": "openai_v2v_python",
+  "name": "agent_candidate",
   "version": "0.1.0",
   "dependencies": [
     {
