--- a/agents/ten_packages/extension/agent_employee/BUILD.gn
+++ b/agents/ten_packages/extension/agent_employee/BUILD.gn
@@ -7,7 +7,7 @@
 #
 import("//build/feature/ten_package.gni")
 
-ten_package("employee") {
+ten_package("agent_employee") {
   package_kind = "extension"
 
   resources = [
