--- a/playground_employee/package.json
+++ b/playground_employee/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@minko-fe/postcss-pxtoviewport": "^1.3.2",
     "@svgr/webpack": "^8.1.0",
+    "@types/d3": "^7.4.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
